tests/transpiler/x/java/join_multi.error
exit status 1
Main.java:34: error: <identifier> expected
         name;
             ^
Main.java:35: error: <identifier> expected
         sku;
            ^
Main.java:36: error: <identifier> expected
        Data4( name,  sku) {
                   ^
Main.java:36: error: <identifier> expected
        Data4( name,  sku) {
                         ^
Main.java:43: error: <identifier> expected
         name;
             ^
Main.java:44: error: <identifier> expected
         sku;
            ^
Main.java:45: error: <identifier> expected
        Result5( name,  sku) {
                     ^
Main.java:45: error: <identifier> expected
        Result5( name,  sku) {
                           ^
8 errors
